Fixed horizontal scroll bug

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,12 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 .font-fjalla {
   font-family: "Fjalla One", sans-serif;
 }
